# cmake_minimum_required(VERSION <specify CMake version here>)
project(algorithm)


set(CMAKE_CXX_STANDARD 17)

#add_executable(algorithm main1.cpp)
#add_executable(test string/lt3_d-_LongestSubstring.cpp)
#add_executable(test string/lt4_d++MedianOfTwoSortedArray.cpp)
add_executable(test string/lt5_d+LongestPalindromicSubString.cpp)

