# cmake_minimum_required(VERSION <specify CMake version here>)
project(algorithm)


set(CMAKE_CXX_STANDARD 20)

#add_executable(algorithm main1.cpp)
#add_executable(test string/lt3_d-_LongestSubstring.cpp)
#add_executable(test string/lt4_d++MedianOfTwoSortedArray.cpp)
#add_executable(test string/lt5_d+LongestPalindromicSubString.cpp)
#add_executable(test string/lt6_d+ZigZag.cpp)
#add_executable(test graph/lt1319_d+MergeComputer.cpp)
#add_executable(test graph/lt130_d+_SurroundedRegions.cpp)
#add_executable(test graph/lt959_d+_regionsBySlashes.cpp)
#add_executable(test graph/lt1579_d+maxNumEdgesToRemove.cpp.cpp)
add_executable(test arr/lt724_d-pivotIndex.cpp)






#
